feat: add health check endpoint and update docs

--- a/docs/stories/1.1.story.md
+++ b/docs/stories/1.1.story.md
@@ -52,22 +52,22 @@
   - [x] Opprett/verifiser `.gitignore` inkluderer: `node_modules/`, `.env*`, `.next/`, `.vercel/`
   - [x] Lag initial commit: `feat: initialize devhub project with payload cms`
 
-- [ ] **Task 6: Opprett Health Check Endpoint** (AC: 7)
-  - [ ] Opprett `app/api/health/route.ts`
-  - [ ] Implementer GET handler som returnerer `{ status: "ok", timestamp: ISO-string }`
-  - [ ] Verifiser at endpointet fungerer: `curl http://localhost:3000/api/health`
+- [x] **Task 6: Opprett Health Check Endpoint** (AC: 7)
+  - [x] Opprett `app/api/health/route.ts`
+  - [x] Implementer GET handler som returnerer `{ status: "ok", timestamp: ISO-string }`
+  - [x] Verifiser at endpointet fungerer: `curl http://localhost:3000/api/health`
 
-- [ ] **Task 7: Opprett README.md** (AC: 8)
-  - [ ] Skriv prosjektbeskrivelse (DevHub - utvikler-community plattform)
-  - [ ] Dokumenter prerequisites (Node.js 18+, pnpm 8+)
-  - [ ] Dokumenter setup-steg (clone, install, env, dev)
-  - [ ] Inkluder tilgjengelige scripts
-  - [ ] Legg til tech stack oversikt
+- [x] **Task 7: Opprett README.md** (AC: 8)
+  - [x] Skriv prosjektbeskrivelse (DevHub - utvikler-community plattform)
+  - [x] Dokumenter prerequisites (Node.js 18+, pnpm 8+)
+  - [x] Dokumenter setup-steg (clone, install, env, dev)
+  - [x] Inkluder tilgjengelige scripts
+  - [x] Legg til tech stack oversikt
 
-- [ ] **Task 8: Opprett .env.example** (AC: 8)
-  - [ ] Dokumenter alle nødvendige environment variables
-  - [ ] Inkluder kommentarer som forklarer hver variabel
-  - [ ] Inkluder placeholder-verdier der mulig
+- [x] **Task 8: Opprett .env.example** (AC: 8)
+  - [x] Dokumenter alle nødvendige environment variables
+  - [x] Inkluder kommentarer som forklarer hver variabel
+  - [x] Inkluder placeholder-verdier der mulig
 
 - [ ] **Task 9: Deploy til Vercel** (AC: 6)
   - [ ] Opprett Vercel-prosjekt via CLI eller dashboard
